Don’t sanitize input - Escape output (#4835)
* Remove Filter::sanitize as FILTER_SANITIZE_STRING is deprecated
Switch from sanitize input to encode output

* remove raw where possible

* use twig escape('html_attr') for unsafe attributes
compare to https://cheatsheetseries.owasp.org/cheatsheets/Cross_Site_Scripting_Prevention_Cheat_Sheet.html#safe-sinks

* no need to use twig format() to show user name of entity

* convert nl to br after escaping in twig templates

* escape user input that is provided via js

* ﻿decode html entities for apostrophe (') and quotation mark (") in some database columns
also remove line break elements (<br />) in comment columns

* no need for this mathjax hacks anymore

* use twig comments

* escape('url') of uri parameters, encode ampersand

* use bindValue()

* dont cast, use getString()

* prevent potential XSS via imported data from CSV files

* use better escapeHTML function

* add eLabFTW version number to json and eln file

* wip update old data upon import

* remove more raw

* no filter_var anymore

* small changes

* use camelCase

* fix metadata update sql query

* escape metadata

* pdf url needs to keep raw filter for qr and href

* htmlspechialchars needs string so cast the values

* don't add second default parameter PDO::PARAM_STR to bindValue()

* actually test for length not only for empty content

* refactor use of htmlspecialchars

* phpcs, add comment for qr "barcode" in pdf

* try twig default escape on href url in pdf

* fix TwigFilters::formatMetadata

* update TwigFilterTest::testFormatMetadata

* make expected result of testFormatMetadata test easier to understand

* avoid not needed space

* encode quotes with htmlspecialchars,extend TwigFiltersTest::testFormatMetadata()

* phpcs

* add back instanceof check

* wip add eln import test that needs data conversion

* fix regression bug in eln import

* refactor switch to escape output 

--- a/src/templates/changelog-block.html
+++ b/src/templates/changelog-block.html
@@ -15,7 +15,15 @@
         <td>{{ change.created_at }}</td>
         <td>{{ change.fullname }}</td>
         <td>{{ change.target }}</td>
-        <td>{{ change.target == 'body' ? change.content|raw : change.content }}</td>
+        <td>
+          {# cannot use ternary here as it is an expression and filter is applied after evaluation #}
+          {%- if change.target == 'body' -%}
+            {# use of raw to make the link to revisions page work #}
+            {{ change.content|raw }}
+          {%- else -%}
+            {{ change.content }}
+          {%- endif -%}
+        </td>
       </tr>
       {% endfor %}
     </tbody>
