--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -214,7 +214,7 @@
         class='form-control'
         placeholder="{{ 'Enter search query, e.g.: %s'|trans|format(getExtendedSearchExample()) }}"
         spellcheck='false'
-        value='{{ App.Request.query.get('q') ? App.Request.query.get('q')|trim }}' />
+        value='{{ App.Request.query.get('q') ? App.Request.query.get('q')|trim|e('html_attr') }}' />
       <pre id='search-highlighting' class='form-control d-none' aria-hidden='true'><code></code></pre>
     </div>
     <p class='smallgray mt-2'>{{ 'Enter a term to search in title, body, date and elabid; or use advanced syntax, or a combination of both.'|trans }}<br>
@@ -270,8 +270,8 @@
     <select id='experimentsCategoriesSelect' class='form-control filterHelper' data-filter='category'>
       <option value='' data-action='clear'>{{ 'Select category'|trans }}</option>
       {% for category in experimentsCategoriesArr %}
-        <option value='{{ category.title }}'>
-          {{ category.title|raw }}
+        <option value='{{ category.title|e('html_attr') }}'>
+          {{ category.title }}
         </option>
       {% endfor %}
     </select>
@@ -282,8 +282,8 @@
     <select id='resourcesCategoriesSelect' class='form-control filterHelper' data-filter='category'>
       <option value='' data-action='clear'>{{ 'Select category'|trans }}</option>
       {% for category in itemsTypesArr %}
-        <option value='{{ category.title }}'>
-          {{ category.title|raw }}
+        <option value='{{ category.title|e('html_attr') }}'>
+          {{ category.title }}
         </option>
       {% endfor %}
     </select>
@@ -294,8 +294,8 @@
     <select id='experimentsStatusSelect' class='form-control filterHelper' data-filter='status'>
       <option value='' data-action='clear'>{{ 'Select status'|trans }}</option>
       {% for category in experimentsStatusArr %}
-        <option value='{{ category.title }}'>
-          {{ category.title|raw }}
+        <option value='{{ category.title|e('html_attr') }}'>
+          {{ category.title }}
         </option>
       {% endfor %}
     </select>
@@ -306,8 +306,8 @@
     <select id='resourcesStatusSelect' class='form-control filterHelper' data-filter='status'>
       <option value='' data-action='clear'>{{ 'Select status'|trans }}</option>
       {% for category in itemsStatusArr %}
-        <option value='{{ category.title }}'>
-          {{ category.title|raw }}
+        <option value='{{ category.title|e('html_attr') }}'>
+          {{ category.title }}
         </option>
       {% endfor %}
     </select>
@@ -353,12 +353,12 @@
       <option data-action='clear'>{{ 'Select author'|trans }}/{{ 'group'|trans }}</option>
       <optgroup label='{{ 'Users'|trans }}'>
         {% for user in usersArr %}
-          <option value='author:{{ user.fullname|raw }}' {{- Request.query.get('owner') == 'author:' ~ user.fullname|raw ? ' selected' }}>[{{ 'author'|trans }}] {{ user.fullname|raw }}</option>
+          <option value='author:{{ user.fullname|e('html_attr') }}' {{- Request.query.get('owner') == 'author:' ~ user.fullname ? ' selected' }}>[{{ 'author'|trans }}] {{ user.fullname }}</option>
         {% endfor %}
       </optgroup>
       <optgroup label='{{ 'Groups'|trans }}'>
         {% for group in teamGroups %}
-          <option value='group:{{ group|raw }}' {{- Request.query.get('owner') == 'group:' ~ group|raw ? ' selected' }}>[{{ 'group'|trans }}] {{ group|raw }}</option>
+          <option value='group:{{ group }}' {{- Request.query.get('owner') == 'group:' ~ group ? ' selected' }}>[{{ 'group'|trans }}] {{ group }}</option>
         {% endfor %}
       </optgroup>
     </select>
