--- a/src/templates/steps-links-view.html
+++ b/src/templates/steps-links-view.html
@@ -6,7 +6,7 @@
     <div class='ml-3 mt-3 col-md-12'>
       {% for step in Entity.entityData.steps %}
         <div id='step_view_{{ step.id }}' class='mb-2 rounded p-1 {{ step.finished ? 'finished' }} {{ App.Request.query.get('highlightstep') == step.id ? 'highlighted' }}'>
-          <input aria-label='{{ 'Toggle completion'|trans }}' type='checkbox' {{ step.finished ? 'checked' }} {{ Entity.type == 'experiments_templates' ? 'disabled' }} data-id='{{ Entity.id }}' autocomplete='off' data-stepid='{{ step.id }}' class='stepbox mr-2' id='stepCheckbox_{{ step.id }}' />{{ step.body|raw }}
+          <input aria-label='{{ 'Toggle completion'|trans }}' type='checkbox' {{ step.finished ? 'checked' }} {{ Entity.type == 'experiments_templates' ? 'disabled' }} data-id='{{ Entity.id }}' autocomplete='off' data-stepid='{{ step.id }}' class='stepbox mr-2' id='stepCheckbox_{{ step.id }}' />{{ step.body }}
         {% if step.finished %}
         <span class='mr-2 text-muted'>
             {{ 'completed'|trans }} <span title='{{ step.finished_time }}' class='relative-moment'></span>
@@ -39,8 +39,8 @@
         <div class='d-flex mb-4 align-items-center' id='parent_{{ randomId }}'>
           <i class='fas fa-link fa-fw mr-2'></i>
           {% if link.link_state == 2 %}<i class='fas fa-fw fa-box-archive fa-fw mr-1'></i>{% endif %}
-          <span class='catstat-btn category-btn mr-1' style='--bg:#{{ link.category_color }}'>{{ link.category_title|raw }}</span>
-          <a href='experiments.php?mode=view&amp;id={{ link.itemid }}' class='text-dark mr-auto'>{{ link.title|raw }}</a>
+          <span class='catstat-btn category-btn mr-1' style='--bg:#{{ link.category_color }}'>{{ link.category_title }}</span>
+          <a href='experiments.php?mode=view&amp;id={{ link.itemid }}' class='text-dark mr-auto'>{{ link.title }}</a>
           {# toggle body #}
           <button type='button' data-type='experiments' data-action='toggle-body' data-id='{{ link.itemid }}' data-randid='{{ randomId }}' title='{{ 'Toggle content'|trans }}' aria-label='{{ 'Toggle content'|trans }}' class='btn p-2 hl-hover-gray mr-3 lh-normal border-0 my-n2'>
             <i class='fas fa-fw fa-square-plus'></i>
@@ -68,8 +68,8 @@
         <div class='d-flex mb-4 align-items-center' id='parent_{{ randomId }}'>
           <i class='fas fa-link fa-fw mr-2'></i>
           {% if link.link_state == 2 %}<i class='fas fa-fw fa-box-archive fa-fw mr-1'></i>{% endif %}
-          <span class='catstat-btn category-btn mr-1' style='--bg:#{{ link.category_color }}'>{{ link.category_title|raw }}</span>
-          <a href='database.php?mode=view&amp;id={{ link.itemid }}' class='text-dark mr-auto'>{{ link.title|raw }}</a>
+          <span class='catstat-btn category-btn mr-1' style='--bg:#{{ link.category_color }}'>{{ link.category_title }}</span>
+          <a href='database.php?mode=view&amp;id={{ link.itemid }}' class='text-dark mr-auto'>{{ link.title }}</a>
           {# toggle body #}
           <button type='button' data-type='items' data-action='toggle-body' data-id='{{ link.itemid }}' data-randid='{{ randomId }}' title='{{ 'Toggle content'|trans }}' aria-label='{{ 'Toggle content'|trans }}' class='btn p-2 hl-hover-gray mr-3 lh-normal border-0 my-n2'>
             <i class='fas fa-fw fa-square-plus'></i>
@@ -101,9 +101,9 @@
               <i class='fas fa-link fa-fw mr-2'></i>
               {% if link.link_state == 2 %}<i class='fas fa-fw fa-box-archive fa-fw mr-1'></i>{% endif %}
               {% if link.category_title %}
-                <span class='catstat-btn category-btn mr-1' style='--bg: #{{ link.category_color }}'>{{ link.category_title|raw }}</span>
+                <span class='catstat-btn category-btn mr-1' style='--bg: #{{ link.category_color }}'>{{ link.category_title }}</span>
               {% endif %}
-              <a href='experiments.php?mode=view&amp;id={{ link.entityid }}' class='text-dark mr-auto'>{{ link.title|raw }}</a>
+              <a href='experiments.php?mode=view&amp;id={{ link.entityid }}' class='text-dark mr-auto'>{{ link.title }}</a>
             {# delete link #}
             <button data-action='destroy-related-link' type='button' data-endpoint='experiments_links' data-target='{{ link.entityid }}' title='{{ 'Delete'|trans }}' class='btn p-2 hl-hover-gray lh-normal border-0 my-n2'>
               <i class='fas fa-fw fa-trash-alt'></i>
@@ -120,11 +120,12 @@
       {% endfor %}
     </div>
 
-    <!-- TODO FIXME
+    {# TODO FIXME
     <div class='ml-3 mt-3'>
       <i class='fas fa-list mr-1 fa-fw'></i>
       <a href='experiments.php?mode=show&amp;related={{ Entity.id }}'>{{ 'Show related experiments'|trans }}</a>
-    </div-->
+    </div
+    #}
     <hr>
   {% endif %}
 
@@ -138,8 +139,8 @@
           <div class='d-flex mb-4 align-items-center' id='parent_{{ randomId }}'>
             <i class='fas fa-link fa-fw mr-2'></i>
             {% if link.link_state == 2 %}<i class='fas fa-fw fa-box-archive fa-fw mr-1'></i>{% endif %}
-            <span class='catstat-btn category-btn mr-1' style='--bg:#{{ link.category_color }}'>{{ link.category_title|raw }}</span>
-            <a href='database.php?mode=view&amp;id={{ link.entityid }}' class='text-dark mr-auto'>{{ link.title|raw }}</a>
+            <span class='catstat-btn category-btn mr-1' style='--bg:#{{ link.category_color }}'>{{ link.category_title }}</span>
+            <a href='database.php?mode=view&amp;id={{ link.entityid }}' class='text-dark mr-auto'>{{ link.title }}</a>
             {# delete link #}
             <button data-action='destroy-related-link' type='button' data-endpoint='items_links' data-target='{{ link.entityid }}' title='{{ 'Delete'|trans }}' class='btn p-2 hl-hover-gray lh-normal border-0 ny-n2'>
               <i class='fas fa-trash-alt'></i>
@@ -156,11 +157,12 @@
       {% endfor %}
     </div>
 
-    <!-- TODO FIXME
+    {# TODO FIXME
     <div class='ml-3 mt-3'>
       <i class='fas fa-list mr-1 fa-fw'></i>
       <a href='database.php?mode=show&amp;related={{ Entity.id }}'>{{ 'Show related items'|trans }}</a>
-    </div-->
+    </div
+    #}
     <hr>
   {% endif %}
 
