--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -78,11 +78,11 @@
                 <input class='form-check-input' type='radio' name='targetCancelEvent' data-targetid='{{ App.Request.query.get('item') }}' value='bookable_item' id='targetCancelEventUsers' checked> <label class='form-check-label' for='targetCancelEventUsers'>{{ 'Past and future users who booked this resource'|trans }}</label>
               </div>
               <div class='form-check'>
-                <input class='form-check-input' type='radio' name='targetCancelEvent' data-targetid='{{ App.teamArr.id }}' value='team' id='targetCancelEventTeam'> <label class='form-check-label' for='targetCancelEventTeam'>{{ 'Members of team %s'|trans|format(App.teamArr.name|raw) }}</label>
+                <input class='form-check-input' type='radio' name='targetCancelEvent' data-targetid='{{ App.teamArr.id }}' value='team' id='targetCancelEventTeam'> <label class='form-check-label' for='targetCancelEventTeam'>{{ 'Members of team %s'|trans|format(App.teamArr.name) }}</label>
               </div>
               {% for teamgroup in teamGroupsArr %}
                 <div class='form-check'>
-                  <input class='form-check-input' type='radio' name='targetCancelEvent' data-targetid='{{ teamgroup.id }}' value='teamgroup' id='targetCancelEventTeamgroup_{{ teamgroup.id }}'> <label class='form-check-label' for='targetCancelEventTeamgroup_{{ teamgroup.id }}'>{{ 'Members of teamgroup %s'|trans|format(teamgroup.name|raw) }}</label>
+                  <input class='form-check-input' type='radio' name='targetCancelEvent' data-targetid='{{ teamgroup.id }}' value='teamgroup' id='targetCancelEventTeamgroup_{{ teamgroup.id }}'> <label class='form-check-label' for='targetCancelEventTeamgroup_{{ teamgroup.id }}'>{{ 'Members of teamgroup %s'|trans|format(teamgroup.name) }}</label>
                 </div>
               {% endfor %}
               <div class='mt-2'>
@@ -124,7 +124,7 @@
             <option value=''>{{ 'Filter by type'|trans }}</option>
             {% for category in bookableItemsTypes %}
               <option value='{{ category.id }}'{{ App.Request.query.get('cat') == category.id ? ' selected' }}>
-            {{ category.title|raw }}</option>
+            {{ category.title }}</option>
             {% endfor %}
           </select>
         </form>
@@ -144,7 +144,7 @@
             {% for item in itemsArr %}
               {# data-color is used to set the background during initial drag #}
               <option data-color='{{ item.category_color }}' value='{{ item.id }}'{{ App.Request.query.get('item') == item.id ? ' selected' }}>
-              {{ item.category_title|raw }} - {{ item.title|raw }}</option>
+              {{ item.category_title }} - {{ item.title }}</option>
             {% endfor %}
           </select>
         </form>
@@ -156,7 +156,7 @@
             <div class='input-group-prepend'>
               <button class='btn btn-secondary' type='button' data-action='remove-param-reload' data-target='item'>X</button>
             </div>
-            <a href='database.php?mode=view&amp;id={{ bookableItemData.id }}' class='list-group-item hl-hover-gray'><span style='--bg: #{{ bookableItemData.category_color }}' class='catstat-btn category-btn mr-2'>{{ bookableItemData.category_title }}</span>{{ bookableItemData.title|raw }}</a>
+            <a href='database.php?mode=view&amp;id={{ bookableItemData.id }}' class='list-group-item hl-hover-gray'><span style='--bg: #{{ bookableItemData.category_color }}' class='catstat-btn category-btn mr-2'>{{ bookableItemData.category_title }}</span>{{ bookableItemData.title }}</a>
           </div>
         </div>
       {% endif %}
@@ -189,14 +189,14 @@
         <td>
           <a href='experiments.php?owner={{ user.userid }}'>
             <span>
-              {{ user.fullname|raw }}
+              {{ user.fullname }}
               {% if user.usergroup in range(1, 3) %}
                 ({{ 'Admin'|trans }})
               {% endif %}
             </span>
           </a>
         </td>
-        <td><a href='mailto:{{ user.email }}'>{{ user.email }}</a></td>
+        <td><a href='mailto:{{ user.email|e('html_attr') }}'>{{ user.email }}</a></td>
         <td>{{ user.orcid }}</td>
       </tr>
       {% endfor %}
@@ -218,11 +218,11 @@
     <input type='hidden' name='emailUsers' />
     <label>{{ 'Send to'|trans }}</label>
     <div class='form-check'>
-      <input class='form-check-input' type='radio' name='target' value='team' id='targetTeam' checked> <label class='form-check-label' for='targetTeam'>{{ 'Members of team %s'|trans|format(App.teamArr.name|raw) }}</label>
+      <input class='form-check-input' type='radio' name='target' value='team' id='targetTeam' checked> <label class='form-check-label' for='targetTeam'>{{ 'Members of team %s'|trans|format(App.teamArr.name) }}</label>
     </div>
     {% for teamgroup in teamGroupsArr %}
       <div class='form-check'>
-        <input class='form-check-input' type='radio' name='target' value='teamgroup_{{ teamgroup.id }}' id='targetTeamgroup_{{ teamgroup.id }}'> <label class='form-check-label' for='targetTeamgroup_{{ teamgroup.id }}'>{{ 'Members of teamgroup %s'|trans|format(teamgroup.name|raw) }}</label>
+        <input class='form-check-input' type='radio' name='target' value='teamgroup_{{ teamgroup.id }}' id='targetTeamgroup_{{ teamgroup.id }}'> <label class='form-check-label' for='targetTeamgroup_{{ teamgroup.id }}'>{{ 'Members of teamgroup %s'|trans|format(teamgroup.name) }}</label>
       </div>
     {% endfor %}
     <div class='form-group'>
